--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     font-family: 'Harmattan', sans-serif, 'Roboto';
     font-size: 18px;
     position: relative;
-    z-index: -1;
+    max-height: 100vh;
 }
 
 .header {
@@ -70,28 +70,44 @@ input {
 
 
 .main {
-    display: block;
     text-align: center;
-    margin: 20px auto;
+    margin: auto;
     padding: 2em;
-
 }
 
 .main-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    row-gap: 2em;
-    column-gap: 2em;
+    gap: 2rem;
     margin: 20px auto;
+    overflow: scroll;
+    height: 330px;
 }
 
-.main-grid .container {
+.book {
     display: flex;
     flex-direction: column;
-    color: var(--white);
+    color: var(--dark-blue);
     background-color: var(--gray);
     width: 100%;
-    height: 200px;
+    padding: 1rem;
+    border-radius: 10px;
+    gap: .5rem;
+}
+
+.book p {
+    background-color: whitesmoke;
+    border-radius: 10px;
+
+}
+
+.isRead {
+    background-color: #d61d39;
+    border-radius: 10px;
+}
+
+.isRead.active {
+    background-color: #3db058;
 }
 
 .add-btn {
@@ -161,12 +177,6 @@ form input[type='text'] {
     justify-content: space-around;
 }
 
-.stars-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 50px);
-    margin: 10px 0;
-
-}
 
 .material-symbols-outlined {
     font-variation-settings:
