basic working, proceed to merge!!

--- a/style.css
+++ b/style.css
@@ -77,13 +77,19 @@ input {
 
 .main-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
     grid-template-rows: repeat(auto-fit, minmax(200px, 200px));
     gap: 2rem;
     margin: 20px auto;
-    overflow: scroll;
     height: 330px;
 }
+
+@media (max-width: 860px) {
+    .main-grid {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+}
+
 
 .book {
     display: flex;
@@ -233,8 +239,4 @@ form input[type='text'] {
 
 .overlay.active {
     display: block;
-}
-
-@media (max-width: 460px) {
-    .main-grid {}
 }
